Classic Editor: Fix minimap and toolbar overlap

--- a/src/classic-editor/style.scss
+++ b/src/classic-editor/style.scss
@@ -11,7 +11,7 @@
 
 // Toolbar
 #ed_toolbar { /* stylelint-disable-line selector-id-pattern */
-	z-index: 1;
+	z-index: 6;
 }
 
 // Original editor textarea
